--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "external-editor": "^2.0.4",
+    "is-promise": "^2.1.0",
+    "js-base64": "^2.1.9",
     "material-ui": "^0.18.3",
+    "mimic-fn": "^1.1.0",
     "react": "^15.5.4",
     "react-burger-menu": "^2.0.2",
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.2",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "rx": "^4.1.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
